feyk kullanıcı girisi

--- a/app/static/css/register.css
+++ b/app/static/css/register.css
@@ -141,6 +141,13 @@ body {
   box-sizing: border-box;
 }
 
+/* Kullanıcı adı inputu için özel stil */
+.username-input {
+  background-color: #1f1f1f !important;
+  color: #666 !important;
+  cursor: not-allowed;
+  border: 1px solid #333 !important;
+}
 
 .form-group input:focus {
   outline: none;
@@ -195,4 +202,3 @@ body {
 .login-link a:hover {
   text-decoration: underline;
 }
-
