--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -27,7 +27,7 @@
         <form id="register-form" class="register-form">
           <div class="form-group">
             <label for="username">Kullanıcı Adı</label>
-            <input type="text" id="username" name="username" required />
+            <input type="text" id="username" name="username" readonly class="username-input" />
           </div>
           
           <div class="form-group">
