Logo ve ad düzeltimi

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -12,7 +12,7 @@
     <aside class="sidebar">
       <h2>
         <img src="{{ url_for('static', filename='images/aktiftech.png') }}" alt="AktifTech Logo" class="header-icon" />
-        AktifTech Asistan
+        MEG Asistan
       </h2>
       <ul id="chat-history"></ul>
     </aside>
