--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,7 +2,7 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Kayıt Ol - AktifTech Asistan</title>
+  <title>Kayıt Ol - MEG Asistan</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   <link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}" />
@@ -12,7 +12,7 @@
     <aside class="sidebar">
       <h2>
         <img src="{{ url_for('static', filename='images/aktiftech.png') }}" alt="AktifTech Logo" class="header-icon" />
-        AktifTech Asistan
+        MEG Asistan
       </h2>
       <ul id="chat-history"></ul>
     </aside>
